# Surgery-Supply-Coordinator

./: .gitignore  BUILD_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  run_backend.bat  run_backend.sh  run_dashboard.bat  run_dashboard.sh
backend/: .env.example  Dockerfile  requirements.txt
backend/api/: index.py
backend/src/: config.py  main.py
backend/src/adk_pipeline/: __init__.py  coordinator.py  llm_client.py  llm_pipeline.py  llm_reasoning_stage.py  llm_stages.py  pipeline.py  stages.py  state_keys.py
backend/src/agents/: PHASE_2_AGENTS.md  blood_bank_agent.py  equipment_agent.py  logistics_agent.py  organ_agent.py  patient_data_agent.py  safety_consent_agent.py  validation_agent.py
backend/src/data/: mock_data.json  repository.py
backend/src/mcp_servers/: blood_bank_mcp.py  equipment_inventory_mcp.py  organ_registry_mcp.py  regional_fallback_mcp.py  remote_client.py
backend/src/models/: blood.py  equipment.py  organ.py  patient.py  report.py  surgery.py
backend/src/security/: audit_logger.py  pii_redaction.py  rbac.py
backend/src/workflows/: readiness_workflow.py
backend/tests/: test_workflow.py
demo/: demo_scenarios.json
external-mcp-server/: README.md  mock_data.json  requirements.txt
external-mcp-server/api/: index.py
external-mcp-server/database/: db_setup.py
external-mcp-server/models/: schemas.py
external-mcp-server/repository/: database_repo.py
external-mcp-server/tools/: mcp_tools.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  DNAHelix.jsx  api.js  styles.css
(+8 files in other folders)
